--- a/Documentation/comment-section/vanilla js/comments.html
+++ b/Documentation/comment-section/vanilla js/comments.html
@@ -53,8 +53,8 @@
             <div id="hdc_comments">
                 <h3>Comments</h3>
                 <div class="hdcomment">
-                    <div class="hd_comment">
-                        <p>Lorem ipsum</p>
+                    <div class="hdc_comment">
+                        <p>Lorem ipsum order of chaose in the morning</p>
                     </div>
                     <div class="hdc_meta">
                         <div class="hdc_meta_date_author">
@@ -64,8 +64,8 @@
                         <div class="hdc_vote">
                             <span>+3</span>
                             <div class="hdc_vote_options">
-                                <span></span>
-                                <span></span>
+                                <span>&9650;</span>
+                                <span>&9660;</span>
                             </div>
                         </div>
                     </div>
