Comment styling added

--- a/Documentation/comment-section/vanilla js/comments.html
+++ b/Documentation/comment-section/vanilla js/comments.html
@@ -64,8 +64,8 @@
                         <div class="hdc_vote">
                             <span>+3</span>
                             <div class="hdc_vote_options">
-                                <span>&9650;</span>
-                                <span>&9660;</span>
+                                <span>&#9650;</span>
+                                <span>&#9660;</span>
                             </div>
                         </div>
                     </div>
