Comment index file updated

--- a/Documentation/comment-section/vanilla js/comments.html
+++ b/Documentation/comment-section/vanilla js/comments.html
@@ -52,7 +52,7 @@
             </div>
             <div id="hdc_comments">
                 <h3>Comments</h3>
-                <div class="hdcomment">
+                <div class="hdcomment" id="hdcomment_1">
                     <div class="hdc_comment">
                         <p>Lorem ipsum order of chaose in the morning</p>
                     </div>
