Comment div modified

--- a/Documentation/comment-section/vanilla js/comments.html
+++ b/Documentation/comment-section/vanilla js/comments.html
@@ -62,10 +62,48 @@
                             <span class="hdc_meta_author">Godfrey</span>
                         </div>
                         <div class="hdc_vote">
-                            <span>+3</span>
+                            <span class="hdc_vote_1">+3</span>
                             <div class="hdc_vote_options">
-                                <span>&#9650;</span>
-                                <span>&#9660;</span>
+                                <span class="hdc_upvote" data-id="1">&#9650;</span>
+                                <span class="hdc_downvote" data-id="1">&#9660;</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="hdcomment" id="hdcomment_2">
+                    <div class="hdc_comment">
+                        <p>Lorem ipsum order of chaose in the morning</p>
+                    </div>
+                    <div class="hdc_meta">
+                        <div class="hdc_meta_date_author">
+                            May 11th 2009
+                            <span class="hdc_meta_author">Joram</span>
+                        </div>
+                        <div class="hdc_vote">
+                            <span class="hdc_vote_1">+3</span>
+                            <div class="hdc_vote_options">
+                                <span class="hdc_upvote" data-id="1">&#9650;</span>
+                                <span class="hdc_downvote" data-id="1">&#9660;</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="hdcomment" id="hdcomment_3">
+                    <div class="hdc_comment">
+                        <p>Lorem ipsum order of chaose in the morning</p>
+                    </div>
+                    <div class="hdc_meta">
+                        <div class="hdc_meta_date_author">
+                            May 11th 2009
+                            <span class="hdc_meta_author">Gary</span>
+                        </div>
+                        <div class="hdc_vote">
+                            <span class="hdc_vote_1">+3</span>
+                            <div class="hdc_vote_options">
+                                <span class="hdc_upvote" data-id="1">&#9650;</span>
+                                <span class="hdc_downvote" data-id="1">&#9660;</span>
                             </div>
                         </div>
                     </div>
