--- a/Documentation/index.html
+++ b/Documentation/index.html
@@ -603,7 +603,7 @@
                             <li>25 January, 2023</li>
                             <li>by Samuel Karanja</li>
                         </ul>
-                        <h4><a href="blog/blog_what_is_lpg.html">What is Liquefied Petroleum Gas?</a></h4>
+                        <h4><a href="blog/lpg_what_is_it.html">What is Liquefied Petroleum Gas?</a></h4>
                         <p>Get to know what Liquefied Petroleum Gas is, its uses, and why its a preferred energy source.
                         </p>
                     </div>
@@ -617,7 +617,7 @@
                                 <li>25 January, 2023</li>
                                 <li>by Samuel Karanja</li>
                             </ul>
-                            <h4><a href="knowledge-post-vertical-light.html">LPG Production - Fractional distillation
+                            <h4><a href="blog/lpg_production.html">LPG Production - Fractional distillation
                                     Process</a></h4>
                             <p>What is Fractional Distillation? Find out more here.</p>
                         </div>
@@ -631,14 +631,14 @@
                             <li>25 January, 2023</li>
                             <li>by Samuel Karanja</li>
                         </ul>
-                        <h4><a href="knowledge-post-vertical-light.html">Safety Precautions when using LPG</a>
+                        <h4><a href="blog/lpg_safety.html">Safety Precautions when using LPG</a>
                         </h4>
                         <p>Liquefied Petroleum Gas is a useful energy source, and also dangerous when mishandled. Find
                             out the safety measures that you can use when working with LPG.</p>
                     </div>
                 </article>
                 <div class="text-center mt-60">
-                    <a href="blog/blog_list_1.html" class="btn btn-primary">Read More</a>
+                    <a href="blog/blog_list.html" class="btn btn-primary">Read More</a>
                 </div>
             </div>
 
