--- a/Documentation/index.html
+++ b/Documentation/index.html
@@ -45,8 +45,8 @@
     <!-- Loader / End -->
     <!-- Header -->
     <header id="header" class="header-vertical light">
-        <a href="index-vertical-light.html" class="photo">
-            <div class="nav-image"><img src="img/bg/Image-8.jpg" alt=""></div>
+        <a href="#" class="photo">
+            <div class="nav-image"><img src="../assets/img/Hessal-152.png" alt=""></div>
         </a>
 
         <!-- Navigation -->
