--- a/Documentation/index.html
+++ b/Documentation/index.html
@@ -54,10 +54,10 @@
             <ul class="nav nav-vertical">
                 <li><a href="#home"><i class="pe-7s-home"></i><span>Home</span></a></li>
                 <li><a href="#about"><i class="pe-7s-ribbon"></i><span>About Us</span></a></li>
-                <li><a href="#our-services"><i class="pe-7s-monitor"></i><span>Our Services</span></a></li>
-                <li><a href="#projects"><i class="pe-7s-comment"></i><span>Projects</span></a></li>
-                <li><a href="#team"><i class="pe-7s-copy-file"></i><span>Our Team</span></a></li>
-                <li><a href="#knowledge"><i class="pe-7s-copy-file"></i><span>Knowledge</span></a></li>
+                <li><a href="#our-services"><i class="pe-7s-portfolio"></i><span>Our Services</span></a></li>
+                <li><a href="#projects"><i class="pe-7s-monitor"></i><span>Projects</span></a></li>
+                <li><a href="#team"><i class="pe-7s-users"></i><span>Our Team</span></a></li>
+                <li><a href="#knowledge"><i class="pe-7s-study"></i><span>Knowledge</span></a></li>
                 <li><a href="#contact"><i class="pe-7s-mail"></i><span>Contact Us</span></a></li>
             </ul>
             <span class="selector"></span>
