--- a/Documentation/index.html
+++ b/Documentation/index.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <!-- Title -->
-    <title>Hessal | Hessal LPG Solutions</title>
+    <title>Hessal</title>
 
     <!-- Favicons -->
     <link rel="shortcut icon" href="assets/img/Hessal-32.png">
