--- a/Documentation/index.html
+++ b/Documentation/index.html
@@ -598,7 +598,8 @@
                             <li>25 January, 2023</li>
                             <li>by Samuel Karanja</li>
                         </ul>
-                        <h4><a href="blog/lpg_what_is_it.html">What is Liquefied Petroleum Gas?</a></h4>
+                        <h4><a href="blog/lpg_what_is_it.html" class="text-highlight">What is Liquefied Petroleum
+                                Gas?</a></h4>
                         <p>Get to know what Liquefied Petroleum Gas is, its uses, and why its a preferred energy source.
                         </p>
                     </div>
@@ -612,7 +613,8 @@
                                 <li>25 January, 2023</li>
                                 <li>by Samuel Karanja</li>
                             </ul>
-                            <h4><a href="blog/lpg_production.html">LPG Production - Fractional distillation
+                            <h4><a href="blog/lpg_production.html" class="text-highlight">LPG Production - Fractional
+                                    distillation
                                     Process</a></h4>
                             <p>What is Fractional Distillation? Find out more here.</p>
                         </div>
@@ -626,7 +628,7 @@
                             <li>25 January, 2023</li>
                             <li>by Samuel Karanja</li>
                         </ul>
-                        <h4><a href="blog/lpg_safety.html">Safety Precautions when using LPG</a>
+                        <h4><a href="blog/lpg_safety.html" class="text-highlight">Safety Precautions when using LPG</a>
                         </h4>
                         <p>Liquefied Petroleum Gas is a useful energy source, and also dangerous when mishandled. Find
                             out the safety measures that you can use when working with LPG.</p>
