--- a/Documentation/index.html
+++ b/Documentation/index.html
@@ -77,6 +77,9 @@
 
             <div class="container container-custom v-center" data-local-scroll>
                 <h1 class="text-lg mb-0">
+                    <a href="#" class="contact-popup-toggle" data-toggle="contact-popup"><span class="typing"
+                            data-text='["Have a question?","Write to us!"]'>Write to us!</span></a>
+                    <a href="#" class="contact-popup-close" data-toggle="contact-popup"><i class="ti-close"></i></a>
                     <div><em>Hi! We are</em>
                         <h1 class="who-we-are">Hessal Solutions!
                         </h1>
