Revised social handles

--- a/Documentation/index.html
+++ b/Documentation/index.html
@@ -96,7 +96,7 @@
 
             <!--Share on Social Media-->
             <div class="vertical-panel-content">
-                <ul class="social-list">
+                <!-- <ul class="social-list">
                     <li><a target="_blank" rel="noopener noreferrer" class="social-list-facebook"
                             href="https://www.facebook.com/sharer/sharer.php?u=https://hessal.com/"><i
                                 class="fa fa-facebook"></i></a></li>
@@ -109,7 +109,7 @@
                     <li><a target="_blank" rel="noopener noreferrer" class="social-list-linkedin"
                             href="https://www.linkedin.com/sharing/share-offsite/?url=https://hessal.com/"><i
                                 class="fa fa-linkedin"></i></a></li>
-                </ul>
+                </ul> -->
             </div>
 
             <div class="elfsight-app-4156245e-ed66-478b-a630-960acb8d3310 whatsapp"></div>
