--- a/Documentation/index.html
+++ b/Documentation/index.html
@@ -677,7 +677,7 @@
                             <div class="col-lg-4">
                                 <div class="feature feature-1">
                                     <div class="icon"><span class="ti-desktop"></span></div>
-                                    <a href="#" class="h3 font-primary">info@hessal.com</a>
+                                    <a href="#" class="h3 font-primary"><small>info@</small>hessalsolutions.com</a>
                                 </div>
                             </div>
                             <div class="col-lg-4">
