--- a/Documentation/index.html
+++ b/Documentation/index.html
@@ -720,7 +720,7 @@
 
         <!-- footer Area
         ===================================== -->
-        <section id="footer-base">
+        <section id="footer-base" class="section-xs">
 
             <div id="footer" class="footer-two pt50">
                 <div class="container-fluid bb-solid-1">
@@ -730,60 +730,48 @@
                             <!-- footer about start -->
                             <div class="col-md-3 col-sm-12 col-xs-12">
                                 <h6 class="font-montserrat text-uppercase color-black">About Us</h6>
-                                <p>Lorem ipsum dolor sit amet consectetur adipiscing elit morbi sagittis.
-                                    Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit.</p>
+                                <p>We are a team of specialist engineers, focusing on the design, installation and
+                                    maintenance of LPG Systems for use in residential, commercial and industrial
+                                    sectors.</p>
                             </div>
-                            <!-- footer about end -->
 
                             <!-- footer menu one start -->
                             <div class="col-md-2 col-md-offset-1 col-sm-3 col-xs-4">
                                 <h6 class="font-montserrat text-uppercase color-black">Menu</h6>
                                 <ul class="no-icon-list">
-                                    <li><a href="#">Home</a></li>
-                                    <li><a href="#">About</a></li>
-                                    <li><a href="#">Service</a></li>
-                                    <li><a href="#">Member</a></li>
+                                    <li><a href="#home">Home</a></li>
+                                    <li><a href="#about">About</a></li>
+                                    <li><a href="#our-services">Our Services</a></li>
+                                    <li><a href="#team">The Team</a></li>
+
                                 </ul>
                             </div>
-                            <!-- footer menu one end -->
 
                             <!-- footer menu two start -->
                             <div class="col-md-2 col-sm-3 col-xs-4">
                                 <h6 class="font-montserrat text-uppercase color-black">Learn more</h6>
                                 <ul class="no-icon-list">
-                                    <li><a href="#">Tour</a></li>
-                                    <li><a href="#">Pricing</a></li>
-                                    <li><a href="#">New Features</a></li>
-                                    <li><a href="#">Payment</a></li>
+                                    <li><a href="#projects">Our Projects</a></li>
+                                    <li><a href="#knowledge">Knowledge</a></li>
                                 </ul>
                             </div>
-                            <!-- footer menu two end -->
 
                             <!-- footer menu three start -->
                             <div class="col-md-2 col-sm-3 col-xs-4">
                                 <h6 class="font-montserrat text-uppercase color-black">Support</h6>
                                 <ul class="no-icon-list">
-                                    <li><a href="#">FAQs</a></li>
-                                    <li><a href="#">Knowledgebase</a></li>
-                                    <li><a href="#">Forum</a></li>
-                                    <li><a href="#">Contact Us</a></li>
+                                    <li><a href="#contact">Contact Us</a></li>
                                 </ul>
                             </div>
-                            <!-- footer menu three end -->
 
                             <!-- footer social icons start -->
                             <div class="col-md-2 col-sm-3 col-xs-12">
-                                <h6 class="font-montserrat text-uppercase color-black">Social Media</h6>
-                                <div class="social social-two">
-                                    <a href="#"><i class="fa fa-twitter color-blue"></i></a>
-                                    <a href="#"><i class="fa fa-facebook color-primary"></i></a>
-                                    <a href="#"><i class="fa fa-linkedin color-blue"></i></a><br><br>
-                                    <a href="#"><i class="fa fa-github color-dark"></i></a>
-                                    <a href="#"><i class="fa fa-pinterest color-red"></i></a>
-                                </div>
+                                <h6 class="font-montserrat text-uppercase color-black">Legal</h6>
+                                <ul class="no-icon-list">
+                                    <li><a href="#">Privacy Policy</a></li>
+                                    <li><a href="#">Terms of Use</a></li>
+                                </ul>
                             </div>
-                            <!-- footer social icons end -->
-
                         </div><!-- row end -->
                     </div><!-- container end -->
                 </div><!-- container-fluid end -->
@@ -794,15 +782,13 @@
 
                             <!-- copyright start -->
                             <div class="col-md-6 col-sm-6 col-xs-6 pull-left">
-                                <p>Copyright &copy;2016 <a href="#">Pasific Studio, LLC</a>. All rights reserved.</p>
+                                <p>Copyright &copy;2023 <a href="#">Hessal Solutions LTD</a>. All rights reserved.</p>
                             </div>
                             <!-- copyright end -->
 
                             <!-- footer bottom start -->
                             <div class="col-md-6 col-sm-6 col-xs-6 pull-right">
                                 <p class="text-right">
-                                    <a href="#" class="mr20">Privacy Policy</a>
-                                    <a href="#" class="mr20">Term of Use</a>
                                     <a href="#" class="mr50">Site Map</a>
                                 </p>
                             </div>
