Added main greetings slider on landing page

--- a/Documentation/index.html
+++ b/Documentation/index.html
@@ -77,12 +77,15 @@
 
             <div class="container container-custom v-center" data-local-scroll>
                 <h1 class="text-lg mb-0">
-                    <a href="#" class="contact-popup-toggle" data-toggle="contact-popup"><span class="typing"
-                            data-text='["Have a question?","Write to us!"]'>Write to us!</span></a>
-                    <a href="#" class="contact-popup-close" data-toggle="contact-popup"><i class="ti-close"></i></a>
-                    <div><em>Hi! We are</em>
-                        <h1 class="who-we-are">Hessal Solutions!
-                        </h1>
+                    <!-- <div class="greetings"><em>Hi! We are</em>
+                    </div>
+                    <h1 class="who-we-are"><span>Hessal Solutions!</span>
+                    </h1> -->
+                    <div class="greetings">
+                        <div><em>Hi! We are</em></div>
+                        <div>
+                            <h1 class="who-we-are"><span>Hessal Solutions..</span></h1>
+                        </div>
                     </div>
                 </h1>
                 <p class="lead lead-color">Liquefied Petroleum Gas (LPG) Installers & Specialists</p>
@@ -753,6 +756,7 @@
                                 <ul class="no-icon-list">
                                     <li><a href="#projects">Our Projects</a></li>
                                     <li><a href="#knowledge">Knowledge</a></li>
+                                    <li><a href="#knowledge">FAQ</a></li>
                                 </ul>
                             </div>
 
@@ -779,27 +783,22 @@
 
             </div><!-- footer end -->
         </section>
-        <div class="container-fluid pt20">
+
+        <!-- Copyright Section -->
+        <div class="container-fluid pt-15 bg-primary">
             <div class="container">
                 <div class="row">
-
-                    <!-- copyright start -->
                     <div class="col-md-6 col-sm-6 col-xs-6 pull-left">
                         <p>Copyright &copy;2023 <a href="#">Hessal Solutions LTD</a>. All rights reserved.</p>
                     </div>
-                    <!-- copyright end -->
-
-                    <!-- footer bottom start -->
                     <div class="col-md-6 col-sm-6 col-xs-6 pull-right">
                         <p class="text-right">
                             <a href="#" class="mr50">Site Map</a>
                         </p>
                     </div>
-                    <!-- footer bottom end -->
-
-                </div><!-- row end -->
-            </div><!-- container end -->
-        </div><!-- container-fluid end -->
+                </div>
+            </div>
+        </div>
 
     </div>
     <!-- Content / End -->
