Modified image zoom for article

--- a/Documentation/index.html
+++ b/Documentation/index.html
@@ -131,7 +131,7 @@
                     As a leading provider of LPG Gas systems, we ensure compliance with relevant industry standards and
                     procedures for LPG installation, maintenance and safety.
                     By adhering to these standards, we not only guarantee proper functioning of our systems but also
-                    instill confidence in our projects and their respective projects.
+                    instill confidence in our clients and their respective projects.
                     We constantly strive to improve our services by embracing latest innovations, such as press-fit
                     systems, that provide added benefits like ease of installation and leak prevention.
                 </p>
