Meta properties added

--- a/Documentation/index.html
+++ b/Documentation/index.html
@@ -2,13 +2,57 @@
 <html lang="en">
 
 <head>
-
-    <!-- Meta -->
+    <!-- Title -->
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-
-    <!-- Title -->
     <title>Hessal | Hessal Solutions</title>
+
+    <!--MetaData-->
+    <meta name="description"
+        content="We are a team of LPG specialist with diverse knowledge on the design, installation and maintenance of LPG systems and appliances. Connect with us for more!" />
+    <link rel="canonical" href="https://hessal-sol.com/" />
+    <meta property="og:locale" content="en_US" />
+    <meta property="og:type" content="Website" />
+    <meta property="og:title" content="Hessal Solutions LTD" />
+    <meta property="og:description"
+        content="We are a team of LPG specialist with diverse knowledge on the design, installation and maintenance of LPG systems and appliances. Connect with us for more!" />
+    <meta property="og:url" content="https://hessal-sol.com/" />
+    <meta property="og:site_name" content="Hessal Solutions LTD" />
+    <meta property="og:image" content="https://hessal-sol.com/img/bg/Image-7.jpg" />
+    <meta property="og:image:width" content="1280" />
+    <meta property="og:image:height" content="720" />
+
+    <meta name="keywords"
+        content="LPG Gas, LPG Cylinder, LPG Installation, LPG Design, LPG Maintenance, LPG Safety, LPG Production, LPG Storage, LPG Tank, LPG Appliances, LPG Equipment, LPG Benefits" />
+    <meta name="author" content="Hessal Solutions" />
+    <meta name="instagram:site" content="hessalsolutions" />
+    <meta name="instagram:image" content="https://hessal-sol.com/img/bg/Image-7.jpg" />
+    <meta name="instagram:title" content="Hessal Solutions LTD" />
+    <meta name="instagram:description"
+        content="We are a team of LPG specialist with diverse knowledge on the design, installation and maintenance of LPG systems and appliances. Connect with us for more!" />
+    <meta name="instagram:url" content="https://www.instagram.com/hessalsolutions/" />
+
+    <!--Pinterest-->
+    <meta name="p:domain_verify" content="47cdeaf5092c27d7cbd0ac31d8674a16" />
+    <script type="application/ld+json">
+  {
+    "@context": "http://schema.org",
+    "@type": "LocalBusiness",
+    "name": "BIMeX",
+    "image": "https://bimexke.com/img/slider/View-01.jpg",
+    "url":"https://bimexke.com",
+    "telephone": "+254 (714) 585 382",
+    "email": "info@bimexke.com",
+    "address": {
+      "@type": "PostalAddress",
+      "streetAddress": "Kiricop Flats, Westlands",
+      "addressRegion": "Nairobi",
+      "addressCountry": "Kenya"
+    }
+  }
+  </script>
+
+
 
     <!-- Favicons -->
     <link rel="shortcut icon" href="assets/img/Hessal-32.png">
