--- a/Documentation/index.html
+++ b/Documentation/index.html
@@ -32,27 +32,44 @@
         content="We are a team of LPG specialist with diverse knowledge on the design, installation and maintenance of LPG systems and appliances. Connect with us for more!" />
     <meta name="instagram:url" content="https://www.instagram.com/hessalsolutions/" />
 
-    <!--Pinterest-->
-    <meta name="p:domain_verify" content="47cdeaf5092c27d7cbd0ac31d8674a16" />
+    <meta name="facebook:site" content="hessalsol" />
+    <meta name="facebook:image" content="https://hessal-sol.com/img/bg/Image-7.jpg" />
+    <meta name="facebook:title" content="Hessal Solutions LTD" />
+    <meta name="facebook:description"
+        content="We are a team of LPG specialist with diverse knowledge on the design, installation and maintenance of LPG systems and appliances. Connect with us for more!" />
+    <meta name="facebook:url" content="https://web.facebook.com/hessalsol" />
+
+    <meta name="linkedin:site" content="hessal-solutions-lpg" />
+    <meta name="linkedin:image" content="https://hessal-sol.com/img/bg/Image-7.jpg" />
+    <meta name="linkedin:title" content="Hessal Solutions LTD" />
+    <meta name="linkedin:description"
+        content="We are a team of LPG specialist with diverse knowledge on the design, installation and maintenance of LPG systems and appliances. Connect with us for more!" />
+    <meta name="linkedin:url" content="https://www.linkedin.com/company/hessal-solutions-lpg/" />
+
+    <meta name="twitter:site" content="HessalSolutions" />
+    <meta name="twitter:image" content="https://hessal-sol.com/img/bg/Image-7.jpg" />
+    <meta name="twitter:title" content="Hessal Solutions LTD" />
+    <meta name="twitter:description"
+        content="We are a team of LPG specialist with diverse knowledge on the design, installation and maintenance of LPG systems and appliances. Connect with us for more!" />
+    <meta name="twitter:url" content="https://twitter.com/HessalSolutions" />
+
     <script type="application/ld+json">
   {
     "@context": "http://schema.org",
     "@type": "LocalBusiness",
-    "name": "BIMeX",
-    "image": "https://bimexke.com/img/slider/View-01.jpg",
-    "url":"https://bimexke.com",
-    "telephone": "+254 (714) 585 382",
-    "email": "info@bimexke.com",
+    "name": "Hessal Solutions",
+    "image": "https://hessal-sol.com/img/bg/Image-7.jpg",
+    "url":"https://hessal-sol.com",
+    "telephone": "+254 (706) 547 003",
+    "email": "info@hessal-sol.com",
     "address": {
       "@type": "PostalAddress",
-      "streetAddress": "Kiricop Flats, Westlands",
+      "streetAddress": "Westlands",
       "addressRegion": "Nairobi",
       "addressCountry": "Kenya"
     }
   }
   </script>
-
-
 
     <!-- Favicons -->
     <link rel="shortcut icon" href="assets/img/Hessal-32.png">
@@ -72,7 +89,6 @@
     <!-- CSS Styles -->
     <link rel="stylesheet" href="assets/css/styles.css" />
     <link rel="stylesheet" href="assets/css-2/project-carousel.css">
-    <!-- CSS Theme -->
     <link id="theme" rel="stylesheet" href="assets/css/themes/theme-sans_serif-orange.css" />
 
 </head>
@@ -141,16 +157,16 @@
             <div class="vertical-panel-content">
                 <ul class="social-list">
                     <li><a target="_blank" rel="noopener noreferrer" class="social-list-facebook"
-                            href="https://www.facebook.com/sharer/sharer.php?u=https://hessal.com/"><i
+                            href="https://www.facebook.com/sharer/sharer.php?u=https://hessal-sol.com/"><i
                                 class="fa fa-facebook"></i></a></li>
                     <li><a target="_blank" rel="noopener noreferrer" class="social-list-whatsapp"
-                            href="whatsapp://send?text=We are Hessal Solutions, LPG Specialists and Installers.%20https://hessal.com/"><i
+                            href="whatsapp://send?text=We are Hessal Solutions, LPG Specialists and Installers.%20https://hessal-sol.com/"><i
                                 class="fa fa-whatsapp"></i></a></li>
                     <li><a target="_blank" rel="noopener noreferrer" class="social-list-twitter"
-                            href="https://twitter.com/intent/tweet?text=We are Hessal Solutions, LPG Specialists and Installers. https://hessal.com/"><i
+                            href="https://twitter.com/intent/tweet?text=We are Hessal Solutions, LPG Specialists and Installers. https://hessal-sol.com/"><i
                                 class="fa fa-twitter"></i></a></li>
                     <li><a target="_blank" rel="noopener noreferrer" class="social-list-linkedin"
-                            href="https://www.linkedin.com/sharing/share-offsite/?url=https://hessal.com/"><i
+                            href="https://www.linkedin.com/sharing/share-offsite/?url=https://hessal-sol.com/"><i
                                 class="fa fa-linkedin"></i></a></li>
                 </ul>
             </div>
