Meta properties updated for social sharing

--- a/Documentation/index.html
+++ b/Documentation/index.html
@@ -9,49 +9,18 @@
 
     <!--MetaData-->
     <meta name="description"
-        content="We are a team of LPG specialist with diverse knowledge on the design, installation and maintenance of LPG systems and appliances. Connect with us for more!" />
+        content="We are a team of LPG specialists with diverse knowledge on the design, installation and maintenance of LPG systems and appliances. Connect with us for more!" />
     <link rel="canonical" href="https://hessal-sol.com/" />
     <meta property="og:locale" content="en_US" />
     <meta property="og:type" content="Website" />
     <meta property="og:title" content="Hessal Solutions LTD" />
     <meta property="og:description"
-        content="We are a team of LPG specialist with diverse knowledge on the design, installation and maintenance of LPG systems and appliances. Connect with us for more!" />
+        content="We are a team of LPG specialists with diverse knowledge on the design, installation and maintenance of LPG systems and appliances. Connect with us for more!" />
     <meta property="og:url" content="https://hessal-sol.com/" />
     <meta property="og:site_name" content="Hessal Solutions LTD" />
     <meta property="og:image" content="https://hessal-sol.com/img/bg/Image-7.jpg" />
     <meta property="og:image:width" content="1280" />
     <meta property="og:image:height" content="720" />
-
-    <meta name="keywords"
-        content="LPG Gas, LPG Cylinder, LPG Installation, LPG Design, LPG Maintenance, LPG Safety, LPG Production, LPG Storage, LPG Tank, LPG Appliances, LPG Equipment, LPG Benefits" />
-    <meta name="author" content="Hessal Solutions" />
-    <meta name="instagram:site" content="hessalsolutions" />
-    <meta name="instagram:image" content="https://hessal-sol.com/img/bg/Image-7.jpg" />
-    <meta name="instagram:title" content="Hessal Solutions LTD" />
-    <meta name="instagram:description"
-        content="We are a team of LPG specialist with diverse knowledge on the design, installation and maintenance of LPG systems and appliances. Connect with us for more!" />
-    <meta name="instagram:url" content="https://www.instagram.com/hessalsolutions/" />
-
-    <meta name="facebook:site" content="hessalsol" />
-    <meta name="facebook:image" content="https://hessal-sol.com/img/bg/Image-7.jpg" />
-    <meta name="facebook:title" content="Hessal Solutions LTD" />
-    <meta name="facebook:description"
-        content="We are a team of LPG specialist with diverse knowledge on the design, installation and maintenance of LPG systems and appliances. Connect with us for more!" />
-    <meta name="facebook:url" content="https://web.facebook.com/hessalsol" />
-
-    <meta name="linkedin:site" content="hessal-solutions-lpg" />
-    <meta name="linkedin:image" content="https://hessal-sol.com/img/bg/Image-7.jpg" />
-    <meta name="linkedin:title" content="Hessal Solutions LTD" />
-    <meta name="linkedin:description"
-        content="We are a team of LPG specialist with diverse knowledge on the design, installation and maintenance of LPG systems and appliances. Connect with us for more!" />
-    <meta name="linkedin:url" content="https://www.linkedin.com/company/hessal-solutions-lpg/" />
-
-    <meta name="twitter:site" content="HessalSolutions" />
-    <meta name="twitter:image" content="https://hessal-sol.com/img/bg/Image-7.jpg" />
-    <meta name="twitter:title" content="Hessal Solutions LTD" />
-    <meta name="twitter:description"
-        content="We are a team of LPG specialist with diverse knowledge on the design, installation and maintenance of LPG systems and appliances. Connect with us for more!" />
-    <meta name="twitter:url" content="https://twitter.com/HessalSolutions" />
 
     <script type="application/ld+json">
   {
@@ -160,10 +129,10 @@
                             href="https://www.facebook.com/sharer/sharer.php?u=https://hessal-sol.com/"><i
                                 class="fa fa-facebook"></i></a></li>
                     <li><a target="_blank" rel="noopener noreferrer" class="social-list-whatsapp"
-                            href="whatsapp://send?text=We are Hessal Solutions, LPG Specialists and Installers.%20https://hessal-sol.com/"><i
+                            href="whatsapp://send?text=We are Hessal Solutions, LPG Specialists and Installers Get to know more about us. Visit our site @ .%20https://hessal-sol.com/"><i
                                 class="fa fa-whatsapp"></i></a></li>
                     <li><a target="_blank" rel="noopener noreferrer" class="social-list-twitter"
-                            href="https://twitter.com/intent/tweet?text=We are Hessal Solutions, LPG Specialists and Installers. https://hessal-sol.com/"><i
+                            href="https://twitter.com/intent/tweet?text=We are Hessal Solutions, LPG Specialists and Installers Get to know more about us. Visit our site @ https://hessal-sol.com/"><i
                                 class="fa fa-twitter"></i></a></li>
                     <li><a target="_blank" rel="noopener noreferrer" class="social-list-linkedin"
                             href="https://www.linkedin.com/sharing/share-offsite/?url=https://hessal-sol.com/"><i
