--- a/Documentation/index.html
+++ b/Documentation/index.html
@@ -22,6 +22,10 @@
     <meta property="og:image:width" content="1280" />
     <meta property="og:image:height" content="720" />
 
+    <meta name="keywords"
+        content="LPG Design, LPG Installation, LPG Maintenance, LPG Appliances, LPG Safety, LPG Leak Detection, LPG Benefits, LPG Uses, LPG Production, LPG Fires, LPG Tanks, LPG Earthing" />
+    <meta name="author" content="Hessal Solutions" />
+
     <script type="application/ld+json">
   {
     "@context": "http://schema.org",
@@ -132,7 +136,7 @@
                             href="whatsapp://send?text=We are Hessal Solutions, LPG Specialists and Installers Get to know more about us. Visit our site @ .%20https://hessal-sol.com/"><i
                                 class="fa fa-whatsapp"></i></a></li>
                     <li><a target="_blank" rel="noopener noreferrer" class="social-list-twitter"
-                            href="https://twitter.com/intent/tweet?text=We are Hessal Solutions, LPG Specialists and Installers Get to know more about us. Visit our site @ https://hessal-sol.com/"><i
+                            href="https://twitter.com/intent/tweet?text=We are Hessal Solutions, LPG Specialists and Installers Get to know more about us. Visit our site @  https://hessal-sol.com/"><i
                                 class="fa fa-twitter"></i></a></li>
                     <li><a target="_blank" rel="noopener noreferrer" class="social-list-linkedin"
                             href="https://www.linkedin.com/sharing/share-offsite/?url=https://hessal-sol.com/"><i
