Updated social media handles

--- a/Documentation/index.html
+++ b/Documentation/index.html
@@ -747,10 +747,14 @@
                             </div>
                             <div class="col-sm-6 text-right">
                                 <ul class="nav-icons">
-                                    <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                                    <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                                    <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-                                    <li><a href="#"><i class="fa fa-pinterest"></i></a></li>
+                                    <li><a href="https://web.facebook.com/hessalsol"><i class="fa fa-facebook"></i></a>
+                                    </li>
+                                    <li><a href="https://twitter.com/HessalSolutions"><i class="fa fa-twitter"></i></a>
+                                    </li>
+                                    <li><a href="https://www.linkedin.com/company/hessal-solutions-lpg/"><i
+                                                class="fa fa-linkedin"></i></a></li>
+                                    <li><a href="https://www.instagram.com/hessalsolutions/"><i
+                                                class="fa fa-instagram"></i></a></li>
                                 </ul>
                             </div>
                         </div>
