--- a/Documentation/index.html
+++ b/Documentation/index.html
@@ -136,13 +136,12 @@
 
             </div>
 
-
             <!--Share on Social Media-->
             <div class="vertical-panel-content">
                 <ul class="social-list">
                     <li><a target="_blank" rel="noopener noreferrer" class="social-list-facebook"
-                            href="https://www.facebook.com/sharer/sharer.php?u=https://hessal-sol.com/">
-                            class="fa fa-facebook"></i></a></li>
+                            href="https://www.facebook.com/sharer/sharer.php?u=https://hessal-sol.com/"><i
+                                class="fa fa-facebook"></i></a></li>
                     <li><a target="_blank" rel="noopener noreferrer" class="social-list-whatsapp"
                             href="whatsapp://send?text=We are Hessal Solutions, LPG Specialists and Installers Get to know more about us. Visit our site @ .%20https://hessal-sol.com/"><i
                                 class="fa fa-whatsapp"></i></a></li>
