Unused images deleted

--- a/Documentation/index.html
+++ b/Documentation/index.html
@@ -503,6 +503,23 @@
                         </a>
                     </div>
 
+                    <div class="project">
+                        <a href="img/bg/projects/Photo-19.jpg" title="Domestic LPG Piping and Cylinder Installations">
+                            <figure>
+                                <img alt="" src="img/bg/projects/Photo-19_1.jpg">
+                                <figcaption>
+                                    <h3 class="project-title">
+                                        Angama Mara
+                                    </h3>
+                                    <h4 class="project-category">
+                                        LPG - Domestic Installation
+                                    </h4>
+                                    <div class="project-zoom"></div>
+                                </figcaption>
+                            </figure>
+                        </a>
+                    </div>
+
 
                     <div class="project">
                         <a href="img/bg/projects/Image-11.jpg" title="Domestic LPG Piping and Cylinder Installations">
