--- a/Documentation/index.html
+++ b/Documentation/index.html
@@ -408,22 +408,23 @@
                 <p class="lead text-muted">We offer routine inspection and maintenance services for LPG systems.
                     Our maintenance procedures cover the following:</p>
                 <p class="lead text-muted">a) Quarterly preventive maintenance – These are quarterly site
-                    visitations that encompass will involve:
-                <ul class="lead text-muted">
-                    <li>Site inspection and report of status of the systems and offering recommendations.</li>
-                    <li>Supply and repair of defective equipment.</li>
-                    <li>Carryout additional training within the maintenance period to ensure all client staff are up to
-                        date</li>
-                </ul>
+                    visitations which will involve:
+                <div class="lead">
+                    <ul class="lead-list text-muted">
+                        <li>Site inspection and report of status of the systems and offering recommendations.</li>
+                        <li>Supply and repair of defective parts and equipment.</li>
+                        <li>Training of Staff on usage of equipment to ensure they are upto date</li>
+                    </ul>
+                </div>
                 </p>
-                <p class="lead text-muted ">b) Breakdown maintenance – Emergency repairs of parts that may have
-                    broken-down.
+                <p class="lead text-muted ">b) Breakdown maintenance – Emergency repairs of worn-out parts and equipment
+                    due to overuse or end-of life.
                 </p>
-                <p class="lead text-muted ">c) Health, safety, and environment.</p>
-                <p class="lead text-muted ">d) Periodic LPG installation checklist.</p>
-                <p class="lead text-muted ">e) Training client on Operational and maintenance of all installed systems &
-                    services</p>
-                <p class="lead text-muted ">f) Services Costing.</p>
+                <p class="lead text-muted ">c) LPG Health and Safety reviews and upgrades.</p>
+                <p class="lead text-muted ">d) Periodic LPG installation checklist - A list that is used to account for
+                    all LPG related installations and equipment.</p>
+                <p class="lead text-muted ">e) Client training on Operation and Maintenance of LPG systems, appliaces
+                    and equipment.</p>
 
             </div>
         </section>
