Deleted unused javascript files

--- a/Documentation/index.html
+++ b/Documentation/index.html
@@ -942,6 +942,7 @@
 
     <!-- JS Libraries -->
     <script src="assets/js/jquery-1.12.4.min.js"></script>
+    <script src="assets/js/interface.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
 
     <!-- JS Plugins -->
@@ -951,8 +952,10 @@
     <script src="assets/js/core.js"></script>
 
     <!-- SCRIPTS -->
+    <script src="assets/js-2/jquery.validate.min.js"></script>
     <script src="assets/js-2/wow.min.js"></script>
     <script src="assets/js-2/jquery.stellar.min.js"></script>
+    <script src="assets/js-2/jquery.magnific-popup.js"></script>
     <script src="assets/js-2/interface.js"></script>
 
     <script
