--- a/Documentation/index.html
+++ b/Documentation/index.html
@@ -70,11 +70,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Oswald&display=swap" rel="stylesheet">
 
     <!-- CSS Styles (Asynchronous loading - LoadCSS) -->
-    <link rel="stylesheet" href="assets/css/styles.css" media="print" onload="this.media='all'; this.onload=null;" />
-    <link rel="stylesheet" href="assets/css-2/project-carousel.css" media="print"
-        onload="this.media='all'; this.onload=null;">
-    <link id="theme" rel="stylesheet" href="assets/css/themes/theme-sans_serif-orange.css" media="print"
-        onload="this.media='all'; this.onload=null;" />
+    <link rel="stylesheet" href="assets/css/styles.css" />
+    <link rel="stylesheet" href="assets/css-2/project-carousel.css" />
+    <link id="theme" rel="stylesheet" href="assets/css/themes/theme-sans_serif-orange.css" />
 
 </head>
 
