--- a/Documentation/index.html
+++ b/Documentation/index.html
@@ -251,31 +251,36 @@
                         <div class="about-card">
                             <div class="skill">
                                 <div class="progress">
-                                    <div class="progress-bar" role="progressbar" aria-valuenow="95"></div>
+                                    <div class="progress-bar" role="progressbar" aria-valuenow="95"
+                                        aria-label="Passion"></div>
                                 </div>
                                 <h5>Passion</h5>
                             </div>
                             <div class="skill">
                                 <div class="progress">
-                                    <div class="progress-bar" role="progressbar" aria-valuenow="90"></div>
+                                    <div class="progress-bar" role="progressbar" aria-valuenow="90"
+                                        aria-label="Teamwork"></div>
                                 </div>
                                 <h5>Teamwork</h5>
                             </div>
                             <div class="skill">
                                 <div class="progress">
-                                    <div class="progress-bar" role="progressbar" aria-valuenow="98"></div>
+                                    <div class="progress-bar" role="progressbar" aria-valuenow="98"
+                                        aria-label="Integrity"></div>
                                 </div>
                                 <h5>Integrity</h5>
                             </div>
                             <div class="skill">
                                 <div class="progress">
-                                    <div class="progress-bar" role="progressbar" aria-valuenow="89"></div>
+                                    <div class="progress-bar" role="progressbar" aria-valuenow="89"
+                                        aria-label="Entrepreneurial spirit"></div>
                                 </div>
                                 <h5>Entrepreneurial spirit</h5>
                             </div>
                             <div class="skill">
                                 <div class="progress">
-                                    <div class="progress-bar" role="progressbar" aria-valuenow="95"></div>
+                                    <div class="progress-bar" role="progressbar" aria-valuenow="95"
+                                        aria-label="Creativity"></div>
                                 </div>
                                 <h5>Creativity</h5>
                             </div>
