--- a/Documentation/index.html
+++ b/Documentation/index.html
@@ -947,6 +947,9 @@
 
     <!-- JS Libraries -->
     <script src="assets/js/jquery-1.12.4.min.js"></script>
+    <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+    <script src="https://code.jquery.com/jquery-migrate-1.4.1.js"></script>
+
     <script src="assets/js/interface.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
 
