--- a/Documentation/index.html
+++ b/Documentation/index.html
@@ -36,7 +36,7 @@
         content="LPG Design, LPG Installation, LPG Maintenance, LPG Appliances, LPG Safety, LPG Leak Detection, LPG Benefits, LPG Uses, LPG Production, LPG Fires, LPG Tanks, LPG Earthing" />
     <meta name="author" content="Hessal Solutions" />
 
-    <script type="application/ld+json">
+    <script async type="application/ld+json">
   {
     "@context": "http://schema.org",
     "@type": "LocalBusiness",
@@ -972,7 +972,7 @@
     <script src="assets/js/gmap.js"></script>
 
     <!--Elfsight Whatsapp Widget-->
-    <script src="https://static.elfsight.com/platform/platform.js" data-use-service-core defer></script>
+    <script async src="https://static.elfsight.com/platform/platform.js" data-use-service-core defer></script>
 </body>
 
 </html>
