Added jquery migrate script

--- a/Documentation/index.html
+++ b/Documentation/index.html
@@ -36,7 +36,7 @@
         content="LPG Design, LPG Installation, LPG Maintenance, LPG Appliances, LPG Safety, LPG Leak Detection, LPG Benefits, LPG Uses, LPG Production, LPG Fires, LPG Tanks, LPG Earthing" />
     <meta name="author" content="Hessal Solutions" />
 
-    <script async type="application/ld+json">
+    <script defer type="application/ld+json">
   {
     "@context": "http://schema.org",
     "@type": "LocalBusiness",
@@ -947,7 +947,7 @@
 
     <!-- JS Libraries -->
     <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
-    <script src="https://code.jquery.com/jquery-migrate-1.4.1.js"></script>
+    <script src="https://code.jquery.com/jquery-migrate-1.4.1.min.js"></script>
 
     <script src="assets/js/interface.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
@@ -965,12 +965,12 @@
     <script src="assets/js-2/jquery.magnific-popup.js"></script>
     <script src="assets/js-2/interface.js"></script>
 
-    <script
+    <script async
         src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBowD5v80CR0CUZc_tpvckfEORVSFyG2hU&callback=initMap&v=weekly"></script>
-    <script src="assets/js/gmap.js"></script>
+    <script async src="assets/js/gmap.js"></script>
 
     <!--Elfsight Whatsapp Widget-->
-    <script async src="https://static.elfsight.com/platform/platform.js" data-use-service-core defer></script>
+    <script src="https://static.elfsight.com/platform/platform.js" data-use-service-core defer></script>
 </body>
 
 </html>
