--- a/Documentation/index.html
+++ b/Documentation/index.html
@@ -289,10 +289,11 @@
 
                     <div class="mobileApps masonry-item col-md-6 col-sm-6 col-xs-12">
                         <div class="image-box">
-                            <div class="image"><a href="#" data-toggle="ajax-modal"><img src="img/bg/team-01.webp"
-                                        width="640" height="360" loading="lazy" alt=""></a></div>
+                            <div class="image"><a href="#" aria-label="Team work" data-toggle="ajax-modal"><img
+                                        src="img/bg/team-01.webp" width="640" height="360" loading="lazy" alt=""></a>
+                            </div>
                             <div class="hover">
-                                <a href="#" aria-label="Team work" data-toggle="ajax-modal">
+                                <a href="#" data-toggle="ajax-modal">
                                     <h4 class="mb-0">"Great things in business are never done by one person, they are
                                         done by a team of individuals."</h4>
                                     <span class="text-muted">Steve Jobs</span>
@@ -884,7 +885,8 @@
     <!-- Content / End -->
 
     <!-- Mobile Nav Toggle -->
-    <a href="#" id="vertical-nav-toggle" class="nav-toggle" data-toggle="mobile-nav"><span><span></span></span></a>
+    <a href="#" id="vertical-nav-toggle" class="nav-toggle" data-toggle="mobile-nav"
+        aria-label="Vertical Navigation"><span><span></span></span></a>
 
     <!-- Contact Popup Controls -->
     <div class="contact-popup-ctrl">
