Amended cache length

--- a/Documentation/index.html
+++ b/Documentation/index.html
@@ -21,7 +21,7 @@
     <!--MetaData-->
     <meta name="description"
         content="We are a team of LPG specialists with diverse knowledge on the design, installation and maintenance of LPG systems and appliances. Connect with us for more!" />
-    <link rel="canonical" href="https://hessal-sol.com/" />
+    <link rel="canonical" href="https://hessal-sol.com/index.html" />
     <meta property="og:locale" content="en_US" />
     <meta property="og:type" content="Website" />
     <meta property="og:title" content="Hessal Solutions LTD" />
