--- a/Documentation/index.html
+++ b/Documentation/index.html
@@ -741,7 +741,11 @@
         <section id="contact" class="section min-fullheight">
 
             <!-- BG Image -->
-            <div id="map" data-style="dark" class="bg-map">
+            <div class="bg-map" data-style="dark">
+                <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d10051.140417271963!2d36.978290457901046!3d-1.2957891005911724!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x182f6cf04fa67455%3A0x683a23e0befabd8f!2sAirways%20Shoping%20Center!5e0!3m2!1sen!2ske!4v1678804200991!5m2!1sen!2ske"
+                    width="1280" height="720" style="border:0;" allowfullscreen="" loading="lazy"
+                    referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
 
             <div class="container container-custom">
@@ -973,11 +977,6 @@
     <script src="assets/js-2/jquery.stellar.min.js"></script>
     <script src="assets/js-2/jquery.magnific-popup.js"></script>
     <script src="assets/js-2/interface.js"></script>
-
-    <script
-        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBowD5v80CR0CUZc_tpvckfEORVSFyG2hU&callback=initMap&v=weekly"
-        defer></script>
-    <script src="assets/js/gmap.js" defer></script>
 
     <!--Elfsight Whatsapp Widget-->
     <script src="https://static.elfsight.com/platform/platform.js" data-use-service-core defer></script>
