--- a/Documentation/index.html
+++ b/Documentation/index.html
@@ -741,7 +741,7 @@
         <section id="contact" class="section min-fullheight">
 
             <!-- BG Image -->
-            <div class="bg-map" data-style="dark">
+            <div data-style="dream" class="bg-map">
                 <iframe
                     src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d10051.140417271963!2d36.978290457901046!3d-1.2957891005911724!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x182f6cf04fa67455%3A0x683a23e0befabd8f!2sAirways%20Shoping%20Center!5e0!3m2!1sen!2ske!4v1678804200991!5m2!1sen!2ske"
                     width="1280" height="720" style="border:0;" allowfullscreen="" loading="lazy"
