--- a/Documentation/index.html
+++ b/Documentation/index.html
@@ -21,6 +21,7 @@
     <!--MetaData-->
     <meta name="description"
         content="We are a team of LPG specialists with diverse knowledge on the design, installation and maintenance of LPG systems and appliances. Connect with us for more!" />
+    <meta name="theme-color" content="#f89a4b" />
     <link rel="canonical" href="https://hessal-sol.com/index.html" />
     <meta property="og:locale" content="en_US" />
     <meta property="og:type" content="Website" />
@@ -158,8 +159,6 @@
                             aria-label="linkedin share button"><i class="fa fa-linkedin"></i></a></li>
                 </ul>
             </div>
-
-            <div class="elfsight-app-4156245e-ed66-478b-a630-960acb8d3310 whatsapp"></div>
         </section>
 
         <!-- Section - about -->
@@ -744,7 +743,7 @@
             <div data-style="dream" class="bg-map">
                 <iframe
                     src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d10051.140417271963!2d36.978290457901046!3d-1.2957891005911724!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x182f6cf04fa67455%3A0x683a23e0befabd8f!2sAirways%20Shoping%20Center!5e0!3m2!1sen!2ske!4v1678804200991!5m2!1sen!2ske"
-                    width="1280" height="720" style="border:0;" allowfullscreen="" loading="lazy"
+                    title="google-map" width="1280" height="720" style="border:0;" allowfullscreen="" loading="lazy"
                     referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
 
@@ -978,8 +977,6 @@
     <script src="assets/js-2/jquery.magnific-popup.js"></script>
     <script src="assets/js-2/interface.js"></script>
 
-    <!--Elfsight Whatsapp Widget-->
-    <script src="https://static.elfsight.com/platform/platform.js" data-use-service-core defer></script>
 </body>
 
 </html>
