Added privacy policy and terms of use pages

--- a/Documentation/index.html
+++ b/Documentation/index.html
@@ -857,15 +857,13 @@
                             <div class="col-md-2 col-sm-3 col-xs-12">
                                 <h6 class="font-montserrat text-uppercase color-black">Legal</h6>
                                 <ul class="no-icon-list">
-                                    <li><a href="#">Privacy Policy</a></li>
-                                    <li><a href="#">Terms of Use</a></li>
+                                    <li><a href="legal/privacy_policy.html">Privacy Policy</a></li>
+                                    <li><a href="legal/terms_of_use.html">Terms of Use</a></li>
                                 </ul>
                             </div>
                         </div><!-- row end -->
                     </div><!-- container end -->
                 </div><!-- container-fluid end -->
-
-
             </div><!-- footer end -->
         </section>
 
