Added copyright footer and sitemap details

--- a/Documentation/index.html
+++ b/Documentation/index.html
@@ -876,7 +876,7 @@
                     </div>
                     <div class="col-md-6 col-sm-6 col-xs-6 pull-right">
                         <p class="text-right">
-                            <a href="#" class="mr50">Site Map</a>
+                            <a href="https://hessal-sol.com/sitemap.xml" class="mr50">Site Map</a>
                         </p>
                     </div>
                 </div>
