--- a/Documentation/legal/terms_of_use.html
+++ b/Documentation/legal/terms_of_use.html
@@ -1041,6 +1041,22 @@
       </div><!-- footer end -->
     </section>
 
+    <!-- Copyright Section -->
+    <div class="container-fluid pt-15 bg-primary">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-6 col-sm-6 col-xs-6 pull-left">
+            <p>Copyright &copy;2023 <a href="#">Hessal Solutions LTD</a>. All rights reserved.</p>
+          </div>
+          <div class="col-md-6 col-sm-6 col-xs-6 pull-right">
+            <p class="text-right">
+              <a href="https://hessal-sol.com/sitemap.xml" class="mr50">Site Map</a>
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+
   </div><!-- Content / End --><!-- Mobile Nav Toggle --> <a href="#" id="vertical-nav-toggle" class="nav-toggle"
     data-toggle="mobile-nav"><span><span></span></span></a><!-- Contact Popup Controls -->
   <div class="contact-popup-ctrl"><a href="#" class="contact-popup-toggle" data-toggle="contact-popup"><span
