--- a/Documentation/index.html
+++ b/Documentation/index.html
@@ -633,7 +633,7 @@
   <div id="contact-popup" class="contact-popup dark">
     <div class="v-center row">
       <div class="col-lg-6 col-md-9">
-        <form action="assets/php/mailto.php" id="contact-form" class="validate-form" method="post">
+        <form action="mailto.php" id="contact-form" class="validate-form" method="post">
           <div class="head"><span class="form-status">1/2</span>
             <h3>Write to us!</h3>
           </div>
@@ -642,7 +642,7 @@
               <div class="row">
                 <div class="form-group col-md-6"><input id="name" name="name" type="text" class="form-control"
                     placeholder="Your name" required></div>
-                <div class="form-group col-md-6"><input id="email" name="email" type="e-mail" class="form-control"
+                <div class="form-group col-md-6"><input id="email" name="email" type="text" class="form-control"
                     placeholder="Your e-mail" required></div>
                 <div class="form-group col-md-6"><input id="phone" name="phone" type="text" class="form-control"
                     placeholder="Your phone number" required></div>
