Modifying php files to output echo value

--- a/Documentation/index.html
+++ b/Documentation/index.html
@@ -657,7 +657,8 @@
                 <nav class="controls"><button class="btn btn-link" data-target="form-prev-step"><i
                       class="i-after ti-angle-left"></i></button> <button type="submit"
                     class="btn btn-white btn-submit"><span>Send a message! <i
-                        class="i-after ti-check"></i></span></button></nav>
+                        class="i-after ti-check"></i></span></button>
+                </nav>
               </div>
             </div>
           </div>
