--- a/Documentation/index.html
+++ b/Documentation/index.html
@@ -656,8 +656,9 @@
                 <div class="info"><span>from</span> <em id="sender"></em></div>
                 <nav class="controls"><button class="btn btn-link" data-target="form-prev-step"><i
                       class="i-after ti-angle-left"></i></button> <button type="submit"
-                    class="btn btn-white btn-submit"><span>Send a message! <i
-                        class="i-after ti-check"></i></span></button>
+                    class="btn btn-white btn-submit"><span>
+                      <div class="myElement">Send a message!</div> <i class="i-after ti-check"></i>
+                    </span></button>
                 </nav>
               </div>
             </div>
