Modified contact form to include mailto.php

--- a/Documentation/index.html
+++ b/Documentation/index.html
@@ -628,7 +628,6 @@
   <div class="contact-popup-ctrl"><a href="#" class="contact-popup-toggle" data-toggle="contact-popup"><span
         class="typing" data-text="[&#34;Have a question?&#34;,&#34;Write to us!&#34;]">Write to us!</span></a> <a
       href="#" class="contact-popup-close" data-toggle="contact-popup"><i class="ti-close"></i></a></div>
-
   <!-- Contact Popup -->
   <div id="contact-popup" class="contact-popup dark">
     <div class="v-center row">
@@ -657,18 +656,15 @@
                 <nav class="controls"><button class="btn btn-link" data-target="form-prev-step"><i
                       class="i-after ti-angle-left"></i></button> <button type="submit"
                     class="btn btn-white btn-submit"><span>
-                      <div class="myElement">Send a message!</div> <i class="i-after ti-check"></i>
-                    </span></button>
-                </nav>
+                      <div class="myElement">Send a message!</div><i class="i-after ti-check"></i>
+                    </span></button></nav>
               </div>
             </div>
           </div>
         </form>
       </div>
     </div>
-  </div>
-
-  <!-- Ajax Modal -->
+  </div><!-- Ajax Modal -->
   <div id="ajax-modal"></div><!-- Ajax Close --> <a href="#" class="ajax-close" data-dismiss="ajax-modal"><i
       class="ti-close"></i></a><!-- Ajax Loader --> <svg id="ajax-loader" class="loader" width="32px" height="32px"
     viewBox="0 0 66 66" xmlns="http://www.w3.org/2000/svg">
