--- a/Documentation/index.html
+++ b/Documentation/index.html
@@ -417,9 +417,9 @@
           <div class="masonry-item col-sm-6 col-xs-12"></div>
           <div class="masonry-item col-sm-6 col-xs-12">
             <div class="image-box">
-              <div class="image"><a href="#" aria-label="Company Team member Godfrey" data-toggle="ajax-modal"><img
+              <div class="image"><a aria-label="Company Team member Godfrey" data-toggle="ajax-modal"><img
                     src="img/profile/Godfrey-01_1.webp" width="640" height="360" loading="lazy" alt=""></a></div>
-              <div class="hover"><a href="#" data-toggle="ajax-modal">
+              <div class="hover"><a data-toggle="ajax-modal">
                   <h4 class="mb-0">Godfrey Muhinda</h4><span class="text-muted">BIM Design Engineer</span>
                 </a></div>
             </div>
@@ -427,9 +427,9 @@
           <div class="masonry-item col-sm-6 col-xs-12"></div>
           <div class="masonry-item col-sm-6 col-xs-12">
             <div class="image-box">
-              <div class="image"><a href="#" aria-label="Company Team member Samuel" data-toggle="ajax-modal"><img
+              <div class="image"><a aria-label="Company Team member Samuel" data-toggle="ajax-modal"><img
                     src="img/profile/Samuel-01_1.webp" width="640" height="360" loading="lazy" alt=""></a></div>
-              <div class="hover"><a href="#" data-toggle="ajax-modal">
+              <div class="hover"><a data-toggle="ajax-modal">
                   <h4 class="mb-0">Samuel Karanja</h4><span class="text-muted">LPG Design Engineer</span>
                 </a></div>
             </div><!-- Blockquote -->
@@ -528,7 +528,7 @@
               <div class="col-lg-4">
                 <div class="feature feature-1">
                   <div class="icon"><span class="ti-desktop"></span></div><a href="#"
-                    class="h3 font-primary"><small>info@</small>hessalsolutions.com</a>
+                    class="h3 font-primary">info@hessal-sol.com</a>
                 </div>
               </div>
               <div class="col-lg-4">
